@@ -3,11 +3,7 @@
 
 #ifdef CONFIG_BLK_DEV_SSD
 
-; Small program to prove that we can drive the serial port directly
-; write a string to tell yo are up and running and the echo back 
-; what is typed, until the '_' is typed.
-
-; SDW 3/3/99
+; SDW 18Jan2000
 
 	.text
 	.global _ssd_open4
@@ -55,15 +51,16 @@ _ssd_open4:
 	out 0x8C, al
 	in al, #0x8A
 
+				;FIXME
 	mov bl, #0x23 		;fix as intel type 1 1x128K device
 
-	mov al, #0x81		;auto-set device size (upto 2M)
+	mov al, #0x81		;set device size
 	out 0x8C, al
 	mov al, bl
 	and al, #0x07
 	out 0x8A, al
 	
-	mov al, bl		;return OK
+	mov al, bl		;return 'device' found 
 	sti
 	ret
 
@@ -85,7 +82,7 @@ open4_error:
 	ret
 
 ;------------------------------------------------------------------
-; read a memory location from ASIC 4 (assumes 1*128K Device
+; read a memory location from flash via ASIC 4
 ;
 ; char ssd_read4( int high_address, int low_address)
 
@@ -126,7 +123,7 @@ _ssd_read4:
 	ret
 
 ;------------------------------------------------------------------
-; read a memory location from ASIC 4 (assumes 1*128K Device
+; read a memory block (16 bytes) from flash via ASIC4 
 ;
 ; ssd_read4( int high_address, int low_address, char *data)
 
@@ -161,12 +158,12 @@ _ssd_readblk4:
 	mov cx, #0x0010
 
 readblk_loop:
-	mov ax, #0x87		;set control register to OE
+	mov ax, #0x87		;action read (OE Pulse)
 	out 0x8C, al
 	mov al, #0x01
 	out 0x8A, al
 
-	mov ax, #0xC0		;read data
+	mov ax, #0xC0		;read result 
 	out 0x8C, al
 	in al, #0x8A
 
@@ -183,7 +180,7 @@ readblk_loop:
 	ret
 	
 ;------------------------------------------------------------------
-; write a memory location from ASIC 4
+; write a memory location to flash via ASIC 4
 ;
 ; int ssd_write( int high_address, int low_address, char data)
 
@@ -202,7 +199,13 @@ _ssd_write4:
 	pop bp
 				;power and clock already on
 				;chanel and size selected
-	mov ax, #0x93		;set address
+	
+	mov ax, #0x87		;set VPP
+	out 0x8C, al
+	mov al, #0x10
+	out 0x8A, al
+
+	mov ax, #0x93		;set address (also acts as a delay for VPP to rise)
 	out 0x8C, al
 	mov ax, ssd_address_low
 	out 0x8A, al
@@ -213,22 +216,16 @@ _ssd_write4:
 	mov al, ah
 	out 0x8A, al
 
-	mov ax, #0x87		;set VPP
-	out 0x8C, al
-	mov al, #0x10
-	out 0x8A, al
-
 	mov cx, #0x0200		;delay (found by experiment)
 loop1:
 	nop
 	loop loop1
 
-	mov ax, #0x80		;write control register 'program setup'
+	mov ax, #0x80		;control register='program setup'
 	out 0x8C, al
 	mov al, #0x40
 	out #0x8A, al
-	
-	mov ax, #0x87		;set VPP + WR
+	mov ax, #0x87		;action write (VPP + WR Pulse)
 	out 0x8C, al
 	mov al, #0x12
 	out 0x8A, al
@@ -237,38 +234,36 @@ loop1:
 	out 0x8C, al
 	mov al, ssd_data
 	out #0x8A, al
-
-	mov ax, #0x87		;set VPP + WR
+	mov ax, #0x87		;action write (VPP + WR Pulse)
 	out 0x8C, al
 	mov al, #0x12
 	out 0x8A, al
 
-	mov cx, #0x0050		;delay approx 20us
+	mov cx, #0x0050		;delay approx 10us
 loop2:
 	nop
 	loop loop2
 
-	mov ax, #0x80		;write control register 'verify setup'
+	mov ax, #0x80		;control register='verify setup'
 	out 0x8C, al
 	mov al, #0xC0
 	out 0x8A, al
-	
-	mov ax, #0x87		;set VPP + WR
+	mov ax, #0x87		;action write (VPP + WR Pulse)
 	out 0x8C, al
 	mov al, #0x12
 	out 0x8A, al
 
-	mov cx, #0x0050		;delay approx 20us
+	mov cx, #0x0050		;delay approx 6us
 loop3:
 	nop
 	loop loop3
 
-	mov ax, #0x87		;set VPP + OE
+	mov ax, #0x87		;action read (VPP + OE Pulse)
 	out 0x8C, al
 	mov al, #0x11
 	out 0x8A, al
 
-	mov ax, #0xC0		;verify data
+	mov ax, #0xC0		;verify data (i.e. read back current value)
 	out 0x8C, al
 	in al, #0x8A
 
@@ -276,10 +271,29 @@ loop3:
 	jmp ssd_write_ok
 
 ssd_write_error:
-	mov bx, #0xFFFF
+	mov bx, #0x1234		;'0x1234' used as error code so it is obvious for
+				; erase cycle....
 
 ssd_write_ok:
-	mov ax, #0x87		;clear VPP + OE
+	mov ax, #0x80		;control register='reset'
+	out 0x8C, al
+	mov al, #0xFF
+	out 0x8A, al
+	mov ax, #0x87		;action write (VPP + WR Pulse)
+	out 0x8C, al
+	mov al, #0x12
+	out 0x8A, al
+
+	mov ax, #0x80		;control register='reset'
+	out 0x8C, al
+	mov al, #0xFF
+	out 0x8A, al
+	mov ax, #0x87		;action write (VPP + WR Pulse)
+	out 0x8C, al
+	mov al, #0x12
+	out 0x8A, al
+
+	mov ax, #0x87		;remove VPP
 	out 0x8C, al
 	mov al, #0x00
 	out 0x8A, al
@@ -289,7 +303,7 @@ ssd_write_ok:
 	ret
 	
 ;------------------------------------------------------------------
-; erase the whole of flash ASIC 4 (assumes 1*128K Device)
+; erases a flash via ASIC 4 (each 64K block must be erased and checked)
 ;
 ; int ssd_erase4( int high_address)
 
@@ -301,15 +315,21 @@ _ssd_erase4:
 	mov bp, sp
 	mov ax, [bp + 4]	;select block to erase
 	mov ssd_address_high, ax
-	mov ax, #0xffff		;scan 65536 address to confirm erase
+	mov ax, #0xffff		;scan 65536 addresses to confirm erase
 	mov ssd_address_low, ax
-	mov ax, #0x0008		;safety count (only try erase 1000 times)
+	mov ax, #0x0100		;safety count (only try erase xxxx times)
+	mov ssd_data, ax
 	pop bp
 
 				;the power and clocks should already be on
 				;and the approriate chanel/size selected.
-				;we don't even need to check it's really ASIC4
-	mov ax, #0x93		;set address
+
+	mov ax, #0x87		;assert VPP
+	out 0x8C, al
+	mov al, #0x10
+	out 0x8A, al
+
+	mov ax, #0x93		;set address (also acts as delay for VPP to rise)
 	out 0x8C, al
 	mov ax, ssd_address_low
 	out 0x8A, al
@@ -320,67 +340,50 @@ _ssd_erase4:
 	mov al, ah
 	out 0x8A, al
 
-	mov ax, #0x87		;set VPP
-	out 0x8C, al
-	mov al, #0x10
-	out 0x8A, al
+;	mov cx, #0x0200		;delay (found by experiment)
+;
+;loop4:
+;	nop
+;	loop loop4
 
-	mov cx, #0x0200		;delay (found by experiment)
-loop4:
-	nop
-	loop loop4
+	jmp ssd_erase_start
+
+ssd_write_ok1:			;hop (to get over jmp limitation)
+	jmp ssd_write_ok
+ssd_write_error1:		;hop (to get over jmp limitation)
+	jmp ssd_write_error
 
 ssd_erase_start:
-	mov ax, ssd_data	;used for safety count
+	mov ax, ssd_data	;decrease ssd_data,used for safety count
 	dec ax
 	mov ssd_data, ax
 
 	cmp ax, #0x0000
 	jne ssd_erase_allowed
 
-	mov bx, #0xFFFF		;tried too many times
+	jmp ssd_write_error1	;uses same code...
 
-	mov ax, #0x87		;clear VPP + OE
-	out 0x8C, al
-	mov al, #0x00
-	out 0x8A, al
-	
-	in ax, #0x2c		;disable clock to 'soap on a rope'
-	and ax, #0xEFFF
-	out 0x2c, ax
-
-	in ax, #0x24		;turn off power to packs
-	and ax, #0x7FFF
-	out 0x24, ax
-
-	mov ax, bx
-	sti
-	ret
-	
 ssd_erase_allowed:
-	mov ax, #0x80		;write control register 'erase setup'
+	mov ax, #0x80		;control register='erase setup'
 	out 0x8C, al
 	mov al, #0x20
 	out #0x8A, al
-	
-	mov ax, #0x87		;set VPP + WR
+	mov ax, #0x87		;action write (VPP + WR Pulse)
 	out 0x8C, al
 	mov al, #0x12
 	out 0x8A, al
 
-	mov ax, #0x80		;write control register 'erase'
+	mov ax, #0x80		;control register='erase'
 	out 0x8C, al
 	mov al, #0x20
 	out #0x8A, al
-
-	mov ax, #0x87		;set VPP + WR
+	mov ax, #0x87		;action write (VPP + WR Pulse)
 	out 0x8C, al
 	mov al, #0x12
 	out 0x8A, al
 
-	mov cx, #0x7F00		;delay approx 10ms
-	
 	sti
+	mov cx, #0x7F00		;delay approx 10ms
 loop5:
 	nop
 	loop loop5
@@ -390,8 +393,10 @@ loop5:
 	mov cx, ssd_address_low
 	jmp ssd_erase_check
 
-hop_skip_jump:
+ssd_erase_start1:		;hops to overcome jmp limitations
 	jmp ssd_erase_start
+ssd_write_ok2:
+	jmp ssd_write_ok1
 
 ssd_erase_check:
 	mov ssd_address_low, cx
@@ -406,57 +411,44 @@ ssd_erase_check:
 	mov al, ah
 	out 0x8A, al
 
-	mov ax, #0x80		;write control register 'erase verify'
+	mov ax, #0x80		;control register='erase verify'
 	out 0x8C, al
 	mov al, #0xA0
 	out 0x8A, al
-	
-	mov ax, #0x87		;set VPP + WR
+	mov ax, #0x87		;action (VPP + WR Pulse)
 	out 0x8C, al
 	mov al, #0x12
 	out 0x8A, al
 	
 	sti
-
-	mov cx, #0x0050		;delay approx 20us
+	mov cx, #0x0050		;delay approx 6us
 loop6:
 	nop
 	loop loop6
-
 	cli
 	out 0x15, al
 
-	mov ax, #0x87		;set VPP + OE
+	mov ax, #0x87		;action read (VPP + OE Pulse)
 	out 0x8C, al
 	mov al, #0x11
 	out 0x8A, al
 
-	mov ax, #0xC0		;verify data
+	mov ax, #0xC0		;verify data is '0xFF'
 	out 0x8C, al
 	in al, #0x8A
 
 	cmp al, #0xFF
 	je ssd_erase_next_address
 
-	jmp hop_skip_jump	;erase whole chip again
+	jmp ssd_erase_start1	;erase whole chip again (requires a hop)
 
 ssd_erase_next_address:
 	mov cx, ssd_address_low
 
 	loop ssd_erase_check	;check next address
 
-	mov bx, ax
-
-	mov ax, #0x87		;clear VPP + OE
-	out 0x8C, al
-	mov al, #0x00
-	out 0x8A, al
-				;don't forget to leave power and clocks on	
-	
-	mov ax, bx
-	sti
-	ret
-	
+	mov bx, cx		;current address
+	jmp ssd_write_ok2	;use common code (requires a hop)
 
 ;------------------------------------------------------------
 ;-----------------------------------------------------------
