@@ -4,6 +4,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Wed Jan 19 13:55 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Fixes to the ssd access code used in the wrt_dsk program.
+
 Thu Jan 13 18:30 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Fix to bug which meant last possible inode could not be
